# FusionXCosmos

./: .env.example  .gitignore  DEMO.mdx  DEPLOYMENT.md  FRONTEND-DEMO.md  HACKATHON-SUCCESS-PERFECT.json  LICENSE  README.md  SIMPLE-EXPLANATION.mdx  cross-chain-relayer.js  demo-bidirectional-swap.js  deploy-juno-testnet.js  deploy-neutron-contract.js  deploy-neutron-testnet.js  deploy-osmosis-testnet.js  deploy-sepolia.js  deploy-simple-contract.js  deploy-working-contract.js  final-perfect-execution.js  hardhat.config.js  integrate-cli-backend.js  package-lock.json  package.json  setup-wallet.js  simple-atomic-swap.rs  test-complete-system.js  vite.config.mjs
contracts/cosmwasm/atomic-swap/: Cargo.toml
contracts/cosmwasm/atomic-swap/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/ethereum/: AtomicSwapEthereum.sol  CrossChainSwapManager.sol  CrossChainSwapManagerTestnet.sol  HashlockTimelock.sol
deployments/: hardhat-deployment.json
frontend/: index.html
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: SwapHistory.jsx  SwapInterface.jsx  WalletConnection.jsx
frontend/src/config/: contracts.js
relayer/: cross-chain-coordinator.js  index.js
scripts/: demo.js
scripts/deploy/: deploy-cosmos.sh  deploy-ethereum.js
tests/: CrossChainSwap.test.js  HashlockTimelock.test.js
