[package]
name = "atomic-swap"
version = "0.1.0"
authors = ["FusionX Team <team@fusionx.dev>"]
edition = "2021"
description = "Atomic Swap CosmWasm Smart Contract for Cross-chain Swaps"
license = "MIT"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["contract"]
contract = []
interface = ["export"]
export = []

[dependencies]
cosmwasm-schema = "1.5.5"
cosmwasm-std = "1.5.5"
cosmwasm-storage = "1.5.5"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.56" }
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
cosmwasm-schema = "1.5.5"